@@ -4,14 +4,17 @@ plugins {
     id "java"
     id "application"
     id "org.openjfx.javafxplugin" version "0.0.8"
-    id "org.beryx.runtime" version "1.8.4"
+    id "org.beryx.runtime" version "1.9.1"
 }
 
 group = "io.github.mzmine"
 version = "3.0"
 description = "MZmine"
-sourceCompatibility = "14"
-targetCompatibility = "14"
+
+// JDK 14+ is needed for jpackage, but we maintain Java 11 source/target
+// compatibility to avoid problems with JavaFX Scene Builder
+sourceCompatibility = "11"
+targetCompatibility = "11"
 defaultTasks "jpackage"
 
 // Check the OS
@@ -50,6 +53,9 @@ repositories {
     maven { // For cpdetector
         url = "https://nexus.nuiton.org/nexus/content/groups/releases/"
     }
+    maven{ // For jmzTab-m Snapshot
+        url = "https://oss.sonatype.org/content/repositories/snapshots/"
+    }
 }
 
 ext {
@@ -63,6 +69,7 @@ ext {
     poiVersion = "4.1.0"
     batikVersion = "1.11"
     controlsfxVersion = "11.0.1"
+    jmzTabmVersion="1.0.6-SNAPSHOT"
 
     // UUID for upgrades of this package on Windows. Generated by https://www.uuidgenerator.net 
     uuid = "896e9c2d-6db8-4259-a1af-1b5f8112d1e1"
@@ -153,6 +160,7 @@ dependencies {
     implementation "org.json:json:20190722"
     implementation "com.panemu:tiwulfx:3.0" // For DetachableTabPane
     implementation "com.github.oshi:oshi-core:4.5.2" // because the version that is pulled by SIRIUS crashes
+    implementation "de.isas.mztab:jmztabm-io:$jmzTabmVersion"
 
 }
 
@@ -189,6 +197,13 @@ tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
 }
 
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
 
 /*
  * Set the basic Java runtime parameters (heap size etc.)
@@ -244,8 +259,8 @@ runtime {
             installerOptions = ["--license-file", "LICENSE.txt"]
         }
         if (OperatingSystem.current().isLinux()) {
-            // rpmbuild and rpm tools need to be installed
-            installerType = ["rpm", "deb"]
+            // for rpm, rpmbuild and rpm tools need to be installed, installerType needs to be set to "rpm"
+            installerType = "deb"
             // additional options for jpackage
             imageOptions = ["--icon", "src/main/resources/MZmineIcon.png"]
             installerOptions = ["--linux-shortcut",
@@ -263,7 +278,8 @@ runtime {
                    "-XX:MinRAMPercentage=80",
                    "-XX:MaxRAMPercentage=80",
                    "-enableassertions",
-                   "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration"
+                   "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration",
+                   "--enable-preview"
         ]
     }
 }
